parts/part5/syntax_grammar.txt
# #  comment
# () grouping
# [] optional
# *  zero or more
# +  one or more
# |  alternative

//TODO
program    ::= (include)* (classdecl | structdecl | vardecl | fundecl | funproto)* EOF # Part V

include    ::= "#include" STRING_LITERAL

structdecl ::= structtype "{" (vardecl)+ "}" ";"    # structure declaration

vardecl    ::= type IDENT ("[" INT_LITERAL "]")* ";" # variable declaration, (e.g. int a;), or multi-dimensional array declaration, (e.g. int a[2][5];)

fundecl    ::= type IDENT "(" params ")" block       # function declaration

funproto   ::= type IDENT "(" params ")" ";"         # function prototype

//TODO
classdecl  ::= classtype ["extends" IDENT] "{" (vardecl)* (fundecl)* "}" # Part V


// TODO
type       ::= ("int" | "char" | "void" | structtype | classtype) ("*")* # Part V

structtype ::= "struct" IDENT

//TODO
classtype  ::= "class" IDENT # Part V

params     ::= [ type IDENT ("[" INT_LITERAL "]")* ("," type IDENT ("[" INT_LITERAL "]")*)* ]

stmt       ::= block
             | "while" "(" exp ")" stmt              # while loop
             | "if" "(" exp ")" stmt ["else" stmt]   # if then else
             | "return" [exp] ";"                    # return
             | exp ";"                               # expression statement, e.g. a function call
             | "continue" ";"                        # continue
             | "break" ";"                           # break

block      ::= "{" (vardecl)* (stmt)* "}"

exp        ::= "(" exp ")"
             | exp "=" exp                           # assignment
             | (IDENT | INT_LITERAL)
             | ("-" | "+") exp
             | CHAR_LITERAL
             | STRING_LITERAL
             | exp (">" | "<" | ">=" | "<=" | "!=" | "==" | "+" | "-" | "/" | "*" | "%" | "||" | "&&") exp  # binary operators
             | arrayaccess | fieldaccess | valueat | addressof | funcall | sizeof | typecast
             | instanceFuncall | newInstance # Part V


//TODO
newInstance     ::= "new" classtype"()"           # Part V - new class object instantiation
instanceFuncall ::= exp "." funcall				  # Part V - call to an instance method

funcall      ::= IDENT "(" [ exp ("," exp)* ] ")" # function call
arrayaccess  ::= exp "[" exp "]"                  # array access
fieldaccess  ::= exp "." IDENT                    # Part V - class instance or structure field member access
valueat      ::= "*" exp                          # Value at operator (pointer indirection)
addressof    ::= "&" exp                          # Address-of operator
sizeof       ::= "sizeof" "(" type ")"            # size of type
typecast     ::= "(" type ")" exp                 # type casting
